# vision-based-apple-picking-robot

./: .gitignore  README.md  requirements.txt
base/: base.ioc
base/Core/Inc/: adc.h  base_control.h  main.h  stm32f1xx_it.h  usart.h
base/Core/Src/: adc.c  base_control.c  base_protocol.c  gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
base/HARDWARE/MOTOR/: motor.c  motor.h
base/HARDWARE/MPU6050/: mpu6050.c  mpu6050.h  mpuiic.c  mpuiic.h
base/HARDWARE/PI/: pi_speed.c  pi_speed.h
base/HARDWARE/PID/: pid.c  pid.h
base/MDK-ARM/: base.uvguix.ans  base.uvoptx  base.uvprojx  startup_stm32f103xb.lst
base/MDK-ARM/base/: base.lnp  base_base.dep
edge-profile/: Edge-Local-State-Tmp-db3a1e36-7c64-4c0f-930e-c00a355358fa.tmp
raspberry_pi/serial/: arm_uart_test.py
raspberry_pi/vision/: yolo_camera_test.py
raspberrypi/: depth_call_test.py
raspberrypi/depth_helper/: CMakeLists.txt  main.c
raspberrypi/serial/: arm_command_tool.py  arm_frame_test.py  base_command_tool.py  base_frame_test.py  robot_uart_frame.py
raspberrypi/tools/: README.md  pi_speed_web.py  rgb_detection_preview.py
raspberrypi/vision/: 03_yolo_image_test.py  demo_pick_controller.py  depth_offset_scan.py  hsv_depth_test.py  live_rgb_depth_stream.py  robot_controller.py
stm32_arm/: OpenArmSTM32.uvguix.admin  OpenArmSTM32.uvguix.ans  OpenArmSTM32.uvoptx  OpenArmSTM32.uvprojx  OpenArmSTM32_Target 1.dep  STM32  2.2.lnk
stm32_arm/USER/: App.c  App.h  ArmControl.c  ArmControl.h  ArmProtocol.c  ArmProtocol.h  PCMsg.c  PCMsg.h  include.h  main.c
stm32_base/LED/: .mxproject  LED.ioc
(+36 files in other folders)
